--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "dayjs": "^1.11.7"
+    "dayjs": "^1.11.7",
+    "swiper": "^9.2.4"
   }
 }
